been fixed.

** Printing bug fixed.

Previously, the state of writingp in the print state could be altered
by recursive calls to printing functions.

** Append mode in hooks.

Append mode in hooks (adding the hook last in the list) now works
correctly.

** GOOPS/GC bug fixed.

The class layout slot, which informs the GC about which slots to GC
protect, is now initialized correctly.

* Changes to Scheme functions and syntax
* Changes to the C interface 


Changes since Guile 1.6.2:

* Changes to the distribution

** Some minor problems with the distribution tarfile have been fixed.

A few files that are automatically generated at build time were
removed from the distribution tarfile.  These changes should not
affect most people, but are relevant to those trying to generate a
post "make distclean" diff against the release tarfile.

* Changes to the stand-alone interpreter
* Changes to Scheme functions and syntax
* Changes to the C interface 


Changes since Guile 1.6.1:

* Changes to the distribution

** GOOPS longer creates layout entries for non-instance slots.

** syntax-case bugs have been fixed

   a) Macro expansion is no longer disturbed if the value of
      (current-module) changes.  This was the cause of a number of
      different bugs people have reported.

   b) Syntax-case now expands Guile's own macros as a part of the
      macro expansion process.  Previously, Guile macro calls were
      treated as applications.

   c) Objects which are constant data and which Guile considers
      self-evaluating are no longer quoted.

   One good consequence of these fixes is that it's now possible to
   use syntax-case macro expansion together with GOOPS code.

* Changes to the stand-alone interpreter

* Changes to Scheme functions and syntax

* Changes to the C interface 

** scm_readline now checks that it's using an output (not input) port.


Changes since Guile 1.6.0:

* Changes to the distribution
